# Stock-Backtesting

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp  main_window.cpp  main_window.hpp
core/: CMakeLists.txt
core/include/backtest/: backtester.hpp  csv_importer.hpp  downsampling.hpp  exporter.hpp  time_utils.hpp  types.hpp
core/src/: backtester.cpp  csv_importer.cpp  downsampling.cpp  exporter.cpp  time_utils.cpp
data/: sample.csv  sample_end_long.csv  sample_mixed_invalid.csv  sample_usdcad_format.csv
tests/: CMakeLists.txt  core_tests.cpp
tests/golden/: equity.csv  metrics.json  trades.csv
tools/: CMakeLists.txt  benchmark_mvp.cpp  parameter_sweep  parameter_sweep.cpp  regenerate_goldens  regenerate_goldens.cpp
